# GitTide

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  main.cpp  qml_main.cpp
cmake/: Dependencies.cmake  compiler.cmake  dependencies.cmake
core/: CMakeLists.txt
core/include/gitgui/: Diff.hpp  DiffEngine.hpp  FileStatus.hpp  GitError.hpp  GitRepo.hpp  Graph.hpp  GraphBuilder.hpp  LibGit2Context.hpp  PathUtil.hpp  ProjectStore.hpp  Version.hpp
core/include/gittide/: DiffEngine.hpp  FileStatus.hpp  GitError.hpp  GitRepo.hpp  GraphBuilder.hpp  PathUtil.hpp  ProjectStore.hpp  Version.hpp  branchinfo.hpp  credentialsstore.hpp  diff.hpp  diffengine.hpp  filestatus.hpp  giterror.hpp  gitrepo.hpp  graph.hpp  graphbuilder.hpp  libgit2context.hpp  log.hpp  merge.hpp  pathutil.hpp  projectstore.hpp  rebase.hpp  submodule.hpp  sync.hpp  watch.hpp
core/src/: DiffEngine.cpp  GitError.cpp  GitRepo.cpp  GraphBuilder.cpp  LibGit2Context.cpp  PathUtil.cpp  ProjectStore.cpp  _placeholder.cpp  credentialselect.cpp  credentialsstore.cpp  diffengine.cpp  giterror.cpp  gitrepo.cpp  graphbuilder.cpp  libgit2context.cpp  log.cpp  pathutil.cpp  projectstore.cpp
docs/: decisions.md  workflow.md
docs/spec/: spec.md
packaging/: gittide.desktop
tests/: CMakeLists.txt  test_build_patch.cpp  test_credential_select.cpp  test_credentials_store.cpp  test_diff_engine.cpp  test_git_error.cpp  test_git_repo.cpp  test_git_repo_branches.cpp  test_git_repo_checkout.cpp  test_git_repo_commit.cpp  test_git_repo_commit_diff.cpp  test_git_repo_diff.cpp  test_git_repo_discard.cpp  test_git_repo_identity.cpp  test_git_repo_init_clone.cpp  test_git_repo_interactive_rebase.cpp  test_git_repo_log.cpp  test_git_repo_merge.cpp  test_git_repo_range_diff.cpp  test_git_repo_rebase.cpp  test_git_repo_reset.cpp  test_git_repo_reword.cpp  test_git_repo_stage.cpp  test_git_repo_stash.cpp  test_git_repo_submodule_merge.cpp  test_git_repo_submodules.cpp  test_git_repo_sync.cpp  test_git_repo_undo.cpp  test_git_repo_watch.cpp  test_graph_builder.cpp  test_libgit2.cpp  test_log.cpp  test_path_util.cpp  test_project_store.cpp  test_smoke.cpp  test_temp_repo.cpp
tests/core/: test_commit_detail.cpp  test_commit_email.cpp  test_git_repo_local_only.cpp  test_gitrepo_logallrefs.cpp  test_submodule_detail.cpp
tests/support/: TempRepo.cpp  TempRepo.hpp  git_config_isolation.cpp  temprepo.cpp  temprepo.hpp
tests/ui/: main.cpp  test_async_merge.cpp  test_async_rebase.cpp  test_async_repo.cpp  test_auth_error.cpp  test_avatar_service.cpp  test_branch_bar.cpp  test_branch_dialogs.cpp  test_branch_list_model.cpp  test_changed_files_list.cpp  test_changed_files_model.cpp  test_changes_view.cpp  test_credential_manager.cpp  test_dashboard_async.cpp  test_dashboard_model.cpp  test_diff_lines_model.cpp  test_diff_view.cpp  test_difflinesmodel_conflict.cpp  test_forge_client.cpp  test_history_model.cpp  test_history_model_reflabels.cpp  test_history_view.cpp  test_identity_list_model.cpp  test_logging.cpp  test_main_window.cpp  test_project_controller.cpp  test_project_list_model.cpp  test_project_sidebar.cpp  test_qcoro_smoke.cpp  test_qml_appcontrols.cpp  test_qml_graph.cpp  test_qml_history.cpp  test_qml_menu_bar.cpp  test_qml_merge_banner.cpp  test_qml_merge_entrypoints.cpp  test_qml_rebase_banner.cpp  test_qml_rebase_banner_message.cpp  test_qml_rebase_entrypoints.cpp  test_qml_rebase_todo.cpp  test_qml_shell.cpp  (+27 more)
ui/: CMakeLists.txt
ui/include/gitgui/ui/: AddRepoDialogs.hpp  AsyncRepo.hpp  ChangesView.hpp  DashboardModel.hpp  DiffView.hpp  MainWindow.hpp  Metatypes.hpp  ProjectController.hpp  ProjectListModel.hpp  ProjectSidebar.hpp  RepoController.hpp  RepoListModel.hpp  SessionStore.hpp  WindowManager.hpp
ui/include/gittide/ui/: AddRepoDialogs.hpp  AsyncRepo.hpp  ChangesView.hpp  DashboardModel.hpp  DiffView.hpp  HistoryModel.hpp  HistoryView.hpp  MainWindow.hpp  Metatypes.hpp  ProjectController.hpp  ProjectSidebar.hpp  RepoController.hpp  RepoListModel.hpp  Theme.hpp  ThemeManager.hpp  ThemeStyle.hpp  WindowManager.hpp  addrepodialogs.hpp  asyncrepo.hpp  autherror.hpp  avatarimageprovider.hpp  avatarservice.hpp  branchbar.hpp  branchdialogs.hpp  branchlistmodel.hpp  changedfileslist.hpp  changedfilesmodel.hpp  changesview.hpp  credentialmanager.hpp  dashboardmodel.hpp  difflinesmodel.hpp  diffview.hpp  forgeclient.hpp  graphcolumn.hpp  graphdelegate.hpp  historylistmodel.hpp  historymodel.hpp  historyview.hpp  hostlistmodel.hpp  identitylistmodel.hpp  (+21 more)
ui/qml/: AboutDialog.qml  AppButton.qml  AppCheckBox.qml  AppComboBox.qml  AppDialog.qml  AppMenu.qml  AppMenuBar.qml  AppMenuItem.qml  AppMenuSeparator.qml  AppRadioButton.qml  AppScrollBar.qml  AppTabButton.qml  Avatar.qml  BranchBar.qml  BranchContextMenu.qml  BranchDropdown.qml  BranchPickerDialog.qml  ChangesPane.qml  CloneProgressDialog.qml  CloneRepoDialog.qml  CommitContextMenu.qml  CommitDetail.qml  CredentialDialog.qml  DeleteBranchDialog.qml  DialogButtons.qml  DialogColumn.qml  DiffView.qml  DiscardChangesDialog.qml  EdgeResizer.qml  EmptyState.qml  FileContextMenu.qml  GraphPane.qml  HistoryPane.qml  IdentityDialog.qml  InitRepoDialog.qml  Main.qml  MenuBarButton.qml  MergeBanner.qml  NativeMenuBar.qml  NewBranchDialog.qml  (+25 more)
ui/resources/: gittide.icns  icons.qrc
ui/src/: AddRepoDialogs.cpp  AsyncRepo.cpp  ChangesView.cpp  DashboardModel.cpp  DiffView.cpp  GraphDelegate.cpp  HistoryModel.cpp  HistoryView.cpp  MainWindow.cpp  ProjectController.cpp  ProjectListModel.cpp  ProjectSidebar.cpp  RepoController.cpp  RepoListModel.cpp  SessionStore.cpp  Theme.cpp  ThemeManager.cpp  ThemeStyle.cpp  WindowManager.cpp  addrepodialogs.cpp  asyncrepo.cpp  autherror.cpp  avatarimageprovider.cpp  avatarservice.cpp  branchbar.cpp  branchdialogs.cpp  branchlistmodel.cpp  changedfileslist.cpp  changedfilesmodel.cpp  changesview.cpp  credentialmanager.cpp  dashboardmodel.cpp  difflinesmodel.cpp  diffview.cpp  forgeclient.cpp  graphcolumn.cpp  graphdelegate.cpp  historylistmodel.cpp  historymodel.cpp  historyview.cpp  (+22 more)
(+147 files in other folders)
